Adição do grupo de cartões no corpo da aplicação

--- a/index.html
+++ b/index.html
@@ -139,12 +139,14 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="card mb-3">
-                            <img src="img/banner/BannerGoodPay.png" class="card-img-top" alt="Imagem do Banner de Promoções">
+                            <img src="img/banner/BannerGoodPay.png" class="card-img-top"
+                                alt="Imagem do Banner de Promoções">
                             <div class="card-body">
                                 <h5 class="card-title">Work for you</h5>
                                 <p class="card-text">GoodPay é uma aplicação de cashback focada em ASG (Agenda de Matriz
                                     Sustentável), assim reduzindo o volume de dinheiro
-                                    impresso e capitalizando sobre o capital parado e transformando em renda para micro comunidades
+                                    impresso e capitalizando sobre o capital parado e transformando em renda para micro
+                                    comunidades
                                     de empreendimento ambiental.
                                 </p>
                                 <p class="card-text"><small class="text-muted">Publicado, 07 de julho 2022</small></p>
@@ -153,12 +155,15 @@
                     </div>
                     <div class="carousel-item">
                         <div class="card mb-3">
-                            <img src="img/banner/BannerGoodPay2.png" class="card-img-top" alt="Imagem do Banner de Promoções">
+                            <img src="img/banner/BannerGoodPay2.png" class="card-img-top"
+                                alt="Imagem do Banner de Promoções">
                             <div class="card-body">
                                 <h5 class="card-title">100% de CDI</h5>
                                 <p class="card-text">
-                                    Ao guardar seu dinheiro no fundo verde, você terá as melhores taxas de retorno e ainda um rendimento
-                                    melhor que a poupança. Fora que os fundos gerados por este recurso são investidos em cooperativas de reciclagem.
+                                    Ao guardar seu dinheiro no fundo verde, você terá as melhores taxas de retorno e
+                                    ainda um rendimento
+                                    melhor que a poupança. Fora que os fundos gerados por este recurso são investidos em
+                                    cooperativas de reciclagem.
                                 </p>
                                 <p class="card-text"><small class="text-muted">Publicado, 07 de julho 2022</small></p>
                             </div>
@@ -166,12 +171,15 @@
                     </div>
                     <div class="carousel-item">
                         <div class="card mb-3">
-                            <img src="img/banner/BannerGoodPay3.png" class="card-img-top" alt="Imagem do Banner de Promoções">
+                            <img src="img/banner/BannerGoodPay3.png" class="card-img-top"
+                                alt="Imagem do Banner de Promoções">
                             <div class="card-body">
                                 <h5 class="card-title">The Pig Time</h5>
                                 <p class="card-text">
-                                    Ao utilizar o sistema de investimentos com aniversário você aumenta consideravelmente seus lucros, porém tem que agendar
-                                    uma data para quebrar o cofre, nesta data coletará os lucros acumuldados e o capital novamente,
+                                    Ao utilizar o sistema de investimentos com aniversário você aumenta
+                                    consideravelmente seus lucros, porém tem que agendar
+                                    uma data para quebrar o cofre, nesta data coletará os lucros acumuldados e o capital
+                                    novamente,
                                     aqui garatimos em investimentos de 1 ano 7% do retorno geral somado aos dividendos.
                                     "Bora poupar no Pig Time."
                                 </p>
@@ -190,6 +198,40 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+            <div class="card-group">
+                <div class="card">
+                    <img src="img/quadrado/1.png" class="card-img-top" alt="Imagem Grupo Card">
+                    <div class="card-body">
+                        <h5 class="card-title">Planejamento</h5>
+                        <p class="card-text">
+                            Faça seu dinheiro render utilizando os sistemas de investimentos
+                            do GoodPay.
+                        </p>
+                        <p class="card-text"><small class="text-muted">07 de julho 2022</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/quadrado/2.png" class="card-img-top" alt="Imagem Grupo Card">
+                    <div class="card-body">
+                        <h5 class="card-title">GP no Bolso</h5>
+                        <p class="card-text">
+                            Com o App do GoodPay você acompanha seu porquinho de qualquer lugar
+                        </p>
+                        <p class="card-text"><small class="text-muted">07 de julho 2022</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/quadrado/3.png" class="card-img-top" alt="Imagem Grupo Card">
+                    <div class="card-body">
+                        <h5 class="card-title">Gaste Bem</h5>
+                        <p class="card-text">
+                            Planejar e gastar bem são os segredos de quem deseja um investimento futuro 
+                            e sua segurança financeira.
+                        </p>
+                        <p class="card-text"><small class="text-muted">07 de julho 2022</small></p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
