--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GoodPay</title>
+    <script type="module" src="js/index.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -46,19 +47,19 @@
                                     aria-labelledby="panelsStayOpen-headingOne">
                                     <div class="accordion-body">
                                         <div class="input-group input-group-lg formAjuste">
-                                            <span class="input-group-text" id="inputGroup-sizing-lg">Login:</span>
-                                            <input type="text" class="form-control btnAjuste"
+                                            <span class="input-group-text" id="inputGroup-sizing-lg">Login</span>
+                                            <input id="login" type="text" class="form-control btnAjuste"
                                                 aria-label="Sizing example input"
                                                 aria-describedby="inputGroup-sizing-lg">
                                         </div>
                                         <div class="input-group input-group-lg formAjuste">
-                                            <span class="input-group-text" id="inputGroup-sizing-lg">Senha:</span>
-                                            <input type="text" class="form-control btnAjuste"
+                                            <span class="input-group-text" id="inputGroup-sizing-lg">Senha</span>
+                                            <input id="senha" type="password" class="form-control btnAjuste"
                                                 aria-label="Sizing example input"
                                                 aria-describedby="inputGroup-sizing-lg">
                                         </div>
                                         <div class="d-grid gap-2 formAjuste">
-                                            <button class="btn btn-primary" type="button">Entrar</button>
+                                            <button id="btnEntrar" class="btn btn-primary" type="button">Entrar</button>
                                             <button class="btn btn-primary" type="button">Cadastre-se</button>
                                         </div>
                                     </div>
@@ -226,7 +227,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Gaste Bem</h5>
                         <p class="card-text">
-                            Planejar e gastar bem são os segredos de quem deseja um investimento futuro 
+                            Planejar e gastar bem são os segredos de quem deseja um investimento futuro
                             e sua segurança financeira.
                         </p>
                         <p class="card-text"><small class="text-muted">07 de julho 2022</small></p>
@@ -235,7 +236,25 @@
             </div>
         </div>
     </main>
+    <!--Área do modal-->
+    <div id="alertaLogin" class="modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Alerta do Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Mensagem de alerta.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
+        <script type="module" src="js/index.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
             crossorigin="anonymous"></script>
